Add Python implementation of GError

Add internally used gi/_error.py module as a basis for implementing
a unified GError between introspection and static bindings. Patch Python
implementations of GError.matches and GError.new_literal in the GLib
overrides

https://bugzilla.gnome.org/show_bug.cgi?id=712519